--- a/styles.css
+++ b/styles.css
@@ -12,8 +12,8 @@
     line-height: inherit;
 }
 .logo img{
-    width: 64px;
-    height: 35px;
+    width: 96px;
+    height: 53px;
 }
 
 .nav-links{
@@ -22,14 +22,22 @@
     list-style: none;
 }
 
-
+.nav-item{
+    border-radius: 50px;
+    border: 2px solid;
+    border-color: red;
+    color: white;
+    margin: 3px;
+    background-color: black;
+}
 .nav-item a{
     display: inline-block;
     padding: 10px 30px;
     text-decoration: none;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 20px;
-    color: white;    
+    color: white;
+    text-transform: uppercase;    
 }
 
 .nav-item:hover{
