navbar changes + landing page

--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,19 @@
+body .navbar {
+    background-color: #171414;
+}
+
+body .landing-page{
+    background-color: #171414;
+}
+
 .navbar{
     display: flex;
-    background-color: gray;
+    background-color: #171414;
     justify-content: space-between;
     align-items: center;
-    margin: -8px;
+    margin: -8px -8px 0 -8px;
+ 
+    
 }
 
 .logo{
@@ -26,20 +36,41 @@
     border-radius: 50px;
     border: 2px solid;
     border-color: red;
-    color: white;
-    margin: 3px;
-    background-color: black;
+    margin-left: 20px;
+    background-color:#403e3e;
+   
 }
 .nav-item a{
     display: inline-block;
     padding: 10px 30px;
     text-decoration: none;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: 20px;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    font-size: 15px;
+    font-weight: 700;
     color: white;
-    text-transform: uppercase;    
+    /*text-transform: uppercase;*/    
 }
 
 .nav-item:hover{
     background-color: red;
+}
+
+
+.nav-item a:hover{
+    color:black;
+}
+.landing-page{
+    background: url(img/sirens.jpg);
+    background-repeat: no-repeat;
+    height: 100vh;
+    display: flex;
+    background-size: cover;
+    border: 0;
+    margin: 0;
+    margin-left: -10px;
+    margin-right: -10px;
+    padding: 0;
+    background-position: center center;
+    align-items: center;
+   
 }
