--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ body .landing-page{
 .logo{
     margin-left: 5%;
     display: inline-block;
-    line-height: inherit;
+    
 }
 .logo img{
     width: 96px;
@@ -67,10 +67,31 @@ body .landing-page{
     background-size: cover;
     border: 0;
     margin: 0;
-    margin-left: -10px;
-    margin-right: -10px;
+    margin-left: auto;
+    margin-right: auto;
     padding: 0;
     background-position: center center;
     align-items: center;
    
+}
+
+.landing-page .page-header{
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 300px;
+    padding-left: 15px;
+    padding-right: 15px;
+    color: white;
+    background-color: black;
+    border-radius: 10px;
+    
+}
+
+
+.title{
+    display: flex;
+    font-weight: 700;
+    font-family: cursive;
+    
+    
 }
