--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,10 @@
+html{
+    box-sizing: border-box;
+    
+}
+body{
+    margin: 0;
+}
 body .navbar {
     background-color: #171414;
 }
@@ -7,6 +14,7 @@ body .landing-page{
 }
 
 .navbar{
+    overflow: hidden;
     display: flex;
     background-color: #171414;
     justify-content: space-between;
@@ -15,6 +23,13 @@ body .landing-page{
  
     
 }
+
+.sticky{
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+
 
 .logo{
     margin-left: 5%;
@@ -61,14 +76,13 @@ body .landing-page{
 }
 .landing-page{
     background: url(img/sirens.jpg);
-    background-repeat: no-repeat;
     height: 100vh;
     display: flex;
     background-size: cover;
     border: 0;
     margin: 0;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 0;
+    margin-right: 0;
     padding: 0;
     background-position: center center;
     align-items: center;
