--- a/styles.css
+++ b/styles.css
@@ -14,12 +14,11 @@ body .landing-page{
 }
 
 .navbar{
-    overflow: hidden;
     display: flex;
     background-color: #171414;
     justify-content: space-between;
     align-items: center;
-    margin: -8px -8px 0 -8px;
+    margin: 0;
  
     
 }
@@ -28,6 +27,7 @@ body .landing-page{
     position: fixed;
     top: 0;
     width: 100%;
+ 
 }
 
 
@@ -92,20 +92,62 @@ body .landing-page{
 .landing-page .page-header{
     margin-right: auto;
     margin-left: auto;
-    margin-bottom: 300px;
+    margin-bottom: 20%;
     padding-left: 15px;
     padding-right: 15px;
     color: white;
     background-color: black;
     border-radius: 10px;
     
+    
 }
-
 
 .title{
     display: flex;
     font-weight: 700;
-    font-family: cursive;
-    
-    
+    font-family: cursive;   
 }
+
+
+.section    {
+    background-color: #e6e6e6;
+}
+.row{
+    display: inline;
+    text-align: center;
+	
+}
+
+.row .section-title{
+    background-color:#403e3e;
+}
+.row h2{
+    font-family: Consolas, monaco, monospace;
+    font-size: 24px;
+    font-style: normal; 
+    font-variant: normal;
+    font-weight: 700; 
+    line-height: 26.4px;
+	text-align:center;
+	margin:0px;
+	padding-bottom: 20px;
+	padding-top:20px;
+	color:#ff2b2d;
+	border: 2px solid;
+	border-color: #ff2b2d;
+}
+
+.container{
+    
+    padding-bottom: 2px;
+}
+#column-img{
+    border: 4px solid;
+    border-color: #ff2b2d;
+    float: left;
+}
+
+#column-text{
+    display: inline;
+}
+
