--- a/styles.css
+++ b/styles.css
@@ -108,6 +108,46 @@ body .landing-page{
     font-family: cursive;   
 }
 
+
+.section    {
+    background-color: #e6e6e6;
+}
 .row{
     display: inline;
+    text-align: center;
+	
 }
+
+.row .section-title{
+    background-color:#403e3e;
+}
+.row h2{
+    font-family: Consolas, monaco, monospace;
+    font-size: 24px;
+    font-style: normal; 
+    font-variant: normal;
+    font-weight: 700; 
+    line-height: 26.4px;
+	text-align:center;
+	margin:0px;
+	padding-bottom: 20px;
+	padding-top:20px;
+	color:#ff2b2d;
+	border: 2px solid;
+	border-color: #ff2b2d;
+}
+
+.container{
+    
+    padding-bottom: 2px;
+}
+#column-img{
+    border: 4px solid;
+    border-color: #ff2b2d;
+    float: left;
+}
+
+#column-text{
+    display: inline;
+}
+
