--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,98 @@ body .landing-page{
     background-color: #171414;
 }
 
+.active {
+    background-color: #4CAF50;
+    color: white;
+  }
+/*
+@media screen and (max-width: 720px){
+    body .navbar{
+        background-color: #ff2b2d;
+    }
+}*/
+
+
+.navbar .icon {
+    display: none;
+  }
+
+.dropdown-menu {
+    float: left;
+    overflow: hidden;
+}
+
+.dropdown-menu .drop-button{
+    font-size: 17px;
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+}
+
+.dropdown-content{
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+
+nav#myNavbar.navbar div.dropdown-menu div.dropdown-content ul.nav-links li.nav-item{
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-menu:hover .drop-button {
+    background-color: red;
+    color:black;
+  }
+
+.dropdown-menu:hover .dropdown-content {
+    display: block;
+}
+
+
+@media screen and (max-width: 720px) {
+    .navbar a:not(:first-child), .dropdown-menu .drop-button {
+      display: none;
+    }
+    .navbar ul li a.icon{
+      float: right;
+      display: block;
+    }
+  }
+
+@media screen and (max-width: 720px) {
+  .navbar.responsive {position: relative;}
+  .navbar.responsive ul li a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .navbar.responsive ul li a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .navbar.responsive .dropdown-menu {float: none;}
+  .navbar.responsive .dropdown-content {position: relative;}
+  .navbar.responsive .dropdown-menu .drop-button {
+    display: block;
+    width: 100%;
+    text-align: left;
+  }
+}
+
 .navbar{
     display: flex;
     background-color: #171414;
@@ -134,7 +226,8 @@ body .landing-page{
 	padding-top:20px;
 	color:#ff2b2d;
 	border: 2px solid;
-	border-color: #ff2b2d;
+    border-color: #ff2b2d;
+    
 }
 
 .container{
