--- a/styles.css
+++ b/styles.css
@@ -17,12 +17,6 @@ body .landing-page{
     background-color: #4CAF50;
     color: white;
   }
-/*
-@media screen and (max-width: 720px){
-    body .navbar{
-        background-color: #ff2b2d;
-    }
-}*/
 
 
 .navbar .icon {
@@ -32,6 +26,8 @@ body .landing-page{
 .dropdown-menu {
     float: left;
     overflow: hidden;
+    display: none;
+    
 }
 
 .dropdown-menu .drop-button{
@@ -40,12 +36,16 @@ body .landing-page{
     outline: none;
     color: white;
     padding: 14px 16px;
+    width: 100%;
     background-color: inherit;
     font-family: inherit;
-    margin: 0;
+    margin-right: 50px;
+    display: block;
+    
 }
 
 .dropdown-content{
+    
     display: none;
     position: absolute;
     background-color: #f9f9f9;
@@ -55,18 +55,38 @@ body .landing-page{
 }
 
 
-nav#myNavbar.navbar div.dropdown-menu div.dropdown-content ul.nav-links li.nav-item{
+.dropdown-content a{
     float: none;
-    color: black;
+    color: white;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
     text-align: left;
+    background-color:#403e3e;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    font-size: 15px;
+    font-weight: 700;
+}
+
+.dropdown-content a:hover{
+    float: none;
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+    background-color: red;
+    color:black;
+    border: 2px solid;
+    border-color: #403e3e;
+
 }
 
 .dropdown-menu:hover .drop-button {
     background-color: red;
     color:black;
+    border: 4px solid;
+    border-color: #403e3e;
   }
 
 .dropdown-menu:hover .dropdown-content {
@@ -75,35 +95,22 @@ nav#myNavbar.navbar div.dropdown-menu div.dropdown-content ul.nav-links li.nav-i
 
 
 @media screen and (max-width: 720px) {
-    .navbar a:not(:first-child), .dropdown-menu .drop-button {
-      display: none;
+    ul.nav-links:nth-child(2){
+        display: none;
     }
-    .navbar ul li a.icon{
+   
+    .icon{
       float: right;
       display: block;
     }
+
+    .dropdown-menu{
+        float: left;
+        overflow: hidden;
+        display: block;
+    }
   }
 
-@media screen and (max-width: 720px) {
-  .navbar.responsive {position: relative;}
-  .navbar.responsive ul li a.icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .navbar.responsive ul li a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-  .navbar.responsive .dropdown-menu {float: none;}
-  .navbar.responsive .dropdown-content {position: relative;}
-  .navbar.responsive .dropdown-menu .drop-button {
-    display: block;
-    width: 100%;
-    text-align: left;
-  }
-}
 
 .navbar{
     display: flex;
@@ -134,9 +141,10 @@ nav#myNavbar.navbar div.dropdown-menu div.dropdown-content ul.nav-links li.nav-i
 }
 
 .nav-links{
-    margin-right: 5%;
+    
     display: flex;
     list-style: none;
+    margin-right: 15px;
 }
 
 .nav-item{
@@ -160,12 +168,14 @@ nav#myNavbar.navbar div.dropdown-menu div.dropdown-content ul.nav-links li.nav-i
 
 .nav-item:hover{
     background-color: red;
+    
 }
-
-
 .nav-item a:hover{
+   
     color:black;
 }
+
+
 .landing-page{
     background: url(img/sirens.jpg);
     height: 100vh;
