fetched some data & trying some charts

--- a/styles.css
+++ b/styles.css
@@ -95,6 +95,7 @@ body .landing-page{
 }
 
 
+
 @media screen and (max-width: 1000px) {
     ul.nav-links:nth-child(2){
         display: none;
@@ -198,6 +199,20 @@ body .landing-page{
     align-items: center;
    
 }
+.topic-landing-page{
+    width: 100vw;
+    height: 400px;
+    position: relative;
+}
+
+.topic-landing-page img{
+    width: inherit;
+    height: inherit;
+    position: absolute;
+    clip: rect(0px,100vw,400px,0px);
+}
+
+
 
 .landing-page .page-header{
     margin-right: auto;
@@ -341,6 +356,10 @@ img{
         height: 380px;
         width: 100vw;
     }
+
+    .topic-landing-page > img:nth-child(1){
+        width: 110vw;
+    }
 }
 
 @media screen and (max-width: 1110px){
@@ -385,6 +404,9 @@ img{
         height: 380px;
         width: 100vw;
     }
+    .topic-landing-page > img:nth-child(1){
+        width: 120vw;
+    }
 }
 
 @media screen and (max-width: 1000px){
@@ -426,6 +448,9 @@ img{
         height: 400px;
         width: 100vw;
     }
+    .topic-landing-page > img:nth-child(1){
+        width: 130vw;
+    }
 }
 
 
@@ -465,20 +490,27 @@ img{
 
     #topic2 > div:nth-child(1) > div:nth-child(2) > div:nth-child(2) > p:nth-child(1){
         font-size: 17px;
-        padding-top: 20px
+        padding-top: 0px
     }
 
     #topic2 > div:nth-child(1) > div:nth-child(2) > div:nth-child(1) > img:nth-child(1){
         width: 430px;
-        height: 330px;
+        height: 370px;
     }
     #topic2 > div:nth-child(1){
-        height: 410px;
+        height: 500px;
         width: 100vw;
+    }
+    .topic-landing-page > img:nth-child(1){
+        width: 140vw;
     }
 }
 
 @media screen and (max-width: 800px){
+
+    .landing-page .page-header{
+        margin-top: 25%;
+    }
 
     #context > div:nth-child(2) > p:nth-child(1){
         font-size: 16px;
@@ -511,11 +543,18 @@ img{
         height: 360px;
         width: 100vw;
     }
+    .topic-landing-page > img:nth-child(1){
+        width: 150vw;
+    }
 }
 
 @media screen and (max-width: 700px){
     .landing-page{
-        height: 40vh;
+        height: 45vh;
+    }
+
+    .landing-page .page-header{
+        margin-top: 40%;
     }
     #topic1 > div:nth-child(1) > div:nth-child(1) > h2:nth-child(1){
         font-size: 18px;
@@ -556,11 +595,17 @@ img{
         height: 700px;
     }
 
-    
+    .topic-landing-page > img:nth-child(1){
+        width: 160vw;
+    }
 }
 
 @media screen and (max-width: 600px){
 
+
+    .landing-page .page-header{
+        margin-top: 40%;
+    }
     #topic1 > div:nth-child(1) > div:nth-child(1) > h2:nth-child(1){
         font-size: 13px;
      
@@ -600,12 +645,15 @@ img{
     #topic2 > div:nth-child(1){
         height: 650px;
     }
+    .topic-landing-page > img:nth-child(1){
+        width: 180vw;
+    }
 }
 
 @media screen and (max-width: 420px){
 
     .landing-page{
-        height: 35vh;
+        height: 55vh;
     }
 
     .landing-page .page-header{
@@ -648,6 +696,9 @@ img{
     #topic2 > div:nth-child(1){
         height: 650px;
     }
+
+
+    
 }
 
 
