first chart completed

--- a/styles.css
+++ b/styles.css
@@ -295,7 +295,7 @@ img{
 }
 .container{
     height: 380px;
-    padding-bottom: 2px;
+    padding-bottom: 50px;
 }
 #column-img{
     border: 4px solid;
@@ -697,8 +697,14 @@ img{
         height: 650px;
     }
 
-
     
+
+  
+}
+
+#topChartForm{
+    text-align: center;
+
 }
 
 
