--- a/styles.css
+++ b/styles.css
@@ -723,8 +723,8 @@ img{
     border: 2px solid;
     border-color: red;
     background-color:#403e3e;
-    margin-left: 50vw;
     margin-bottom: 25px;
+    margin-left: 35vw;
     margin-top: 25px;
 }
 
@@ -734,8 +734,6 @@ img{
 float: none;
 color: white;
 text-decoration: none;
-display: block;
-text-align: left;
 background-color: red;
 color:black;
 border: 4px solid;
@@ -809,6 +807,38 @@ border-radius: 10px;
 
 
 #geo-btn-csv:hover{
+
+float: none;
+color: white;
+text-decoration: none;
+background-color: red;
+color:black;
+border: 4px solid;
+border-color: #403e3e;
+border-radius: 10px;
+
+
+}
+
+#top-btn-csv{
+    display: inline-block;
+    padding: 10px 30px;
+    text-decoration: none;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    font-size: 12px;
+    font-weight: 700;
+    color: white;
+    width: 100px;
+    border: 2px solid;
+    border-color: red;
+    background-color:#403e3e;
+    margin-bottom: 25px;
+    margin-top: 25px;
+    
+}
+
+
+#top-btn-csv:hover{
 
 float: none;
 color: white;
