--- a/styles.css
+++ b/styles.css
@@ -254,7 +254,8 @@ html body main div#topic1.section div.container div#context.row div#column-text 
     text-align: center;
 }
 
-.row .section-title {
+.row .section-title,
+html body main.section h1.section-title {
     background-color: #403e3e;
 }
 
@@ -389,9 +390,10 @@ div.container:nth-child(2)>div:nth-child(2)>div:nth-child(1)>p:nth-child(1) {
     #topChartForm {
         margin-left: 25vw;
     }
-    #top-btn,
-    html body main div#topic1.section div.buttons a#geo-btn-png {
-        margin-left: 20vw;
+    html body main div#topic1.section a#top-btn,
+    html body main div#topic1.section div.buttons a#geo-btn-png,
+    html body main div#topic2.section div.container-id div.buttons a#pie-btn-png {
+        margin-left: 25vw;
     }
 }
 
@@ -448,7 +450,8 @@ div.container:nth-child(2)>div:nth-child(2)>div:nth-child(1)>p:nth-child(1) {
         font-size: 12px;
         padding: 10px 15px;
     }
-    #topic1>div:nth-child(1)>div:nth-child(1)>h2:nth-child(1) {
+    #topic1>div:nth-child(1)>div:nth-child(1)>h2:nth-child(1),
+    html body main div#topic2.section div.container-id div.row h2.section-title {
         padding-top: 20px;
         font-size: 20px;
     }
@@ -488,7 +491,8 @@ div.container:nth-child(2)>div:nth-child(2)>div:nth-child(1)>p:nth-child(1) {
         font-size: 16px;
     }
     html body main div#topic1.section a#top-btn,
-    html body main div#topic1.section div.buttons a#geo-btn-png {
+    html body main div#topic1.section div.buttons a#geo-btn-png,
+    html body main div#topic2.section div.container-id div.buttons a#pie-btn-png {
         margin-left: 25vw;
     }
 }
@@ -508,7 +512,7 @@ div.container:nth-child(2)>div:nth-child(2)>div:nth-child(1)>p:nth-child(1) {
         padding-bottom: 65px;
     }
     #topic1>div:nth-child(1) {
-        height: 400px;
+        height: 350px;
     }
     #topic2>div:nth-child(1)>div:nth-child(2)>div:nth-child(2)>p:nth-child(1) {
         font-size: 16px;
@@ -531,7 +535,8 @@ div.container:nth-child(2)>div:nth-child(2)>div:nth-child(1)>p:nth-child(1) {
         margin-left: 15vw;
     }
     html body main div#topic1.section a#top-btn,
-    html body main div#topic1.section div.buttons a#geo-btn-png {
+    html body main div#topic1.section div.buttons a#geo-btn-png,
+    html body main div#topic2.section div.container-id div.buttons a#pie-btn-png {
         margin-left: 20vw;
     }
 }
@@ -583,7 +588,8 @@ div.container:nth-child(2)>div:nth-child(2)>div:nth-child(1)>p:nth-child(1) {
         margin-top: 10vh;
     }
     html body main div#topic1.section a#top-btn,
-    html body main div#topic1.section div.buttons a#geo-btn-png {
+    html body main div#topic1.section div.buttons a#geo-btn-png,
+    html body main div#topic2.section div.container-id div.buttons a#pie-btn-png {
         margin-left: 12vw;
     }
 }
@@ -604,9 +610,10 @@ div.container:nth-child(2)>div:nth-child(2)>div:nth-child(1)>p:nth-child(1) {
         height: 330px;
     }
     #topic1>div:nth-child(1) {
-        height: 650px;
+        height: 700px;
     }
-    #topic2>div:nth-child(1)>div:nth-child(1)>h2:nth-child(1) {
+    #topic2>div:nth-child(1)>div:nth-child(1)>h2:nth-child(1),
+    html body main div#topic2.section div.container-id div.row h2.section-title {
         font-size: 13px;
     }
     #topic2>div:nth-child(1)>div:nth-child(2)>div:nth-child(2)>p:nth-child(1) {
@@ -618,7 +625,7 @@ div.container:nth-child(2)>div:nth-child(2)>div:nth-child(1)>p:nth-child(1) {
         height: 330px;
     }
     #topic2>div:nth-child(1) {
-        height: 650px;
+        height: 700px;
     }
     .topic-landing-page>img:nth-child(1) {
         width: 180vw;
@@ -630,13 +637,23 @@ div.container:nth-child(2)>div:nth-child(2)>div:nth-child(1)>p:nth-child(1) {
         margin-left: 10px;
     }
     html body main div#topic1.section a#top-btn,
-    html body main div#topic1.section div.buttons a#geo-btn-png {
+    html body main div#topic1.section div.buttons a#geo-btn-png,
+    html body main div#topic2.section div.container-id div.buttons a#pie-btn-png {
         margin-left: 8vw;
+    }
+    #topChartForm {
+        display: flex;
+        flex-direction: column;
+    }
+    .container-id>div:nth-child(2)>div:nth-child(1)>form:nth-child(2) {
+        display: flex;
+        flex-direction: column;
     }
 }
 
 @media screen and (max-width: 550px) {
-    html body main div#topic1.section a#top-btn {
+    html body main div#topic1.section a#top-btn,
+    html body main div#topic2.section div.container-id div.buttons a#pie-btn-png {
         margin-left: 0vw;
     }
 }
@@ -647,12 +664,18 @@ div.container:nth-child(2)>div:nth-child(2)>div:nth-child(1)>p:nth-child(1) {
     html body main div#topic1.section a#top-btn-svg,
     html body main div#topic1.section div.buttons a#geo-btn-png,
     html body main div#topic1.section div.buttons a#geo-btn-csv,
-    html body main div#topic1.section div.buttons a#geo-btn-svg {
+    html body main div#topic1.section div.buttons a#geo-btn-svg,
+    html body main div#topic2.section div.container-id div.buttons a#pie-btn-png,
+    html body main div#topic2.section div.container-id div.buttons a#pie-btn-csv,
+    html body main div#topic2.section div.container-id div.buttons a#pie-btn-svg {
         margin-left: 30vw;
         margin-top: 15px;
     }
     html body main div#topic1.section div.container div.row h2.section-title {
         font-size: 15px;
+    }
+    html body main div#topic1.section div.container {
+        height: 750px;
     }
 }
 
@@ -676,6 +699,12 @@ div.container:nth-child(2)>div:nth-child(2)>div:nth-child(1)>p:nth-child(1) {
         padding-top: 0px;
         padding-bottom: 0px;
     }
+    #context>div:nth-child(2)>p:nth-child(1),
+    div.container:nth-child(4)>div:nth-child(2)>div:nth-child(1)>p:nth-child(1),
+    #topic2>div:nth-child(1)>div:nth-child(2)>div:nth-child(2)>p:nth-child(1) {
+        padding-left: 5px;
+        padding-right: 5px;
+    }
     #topic1>div:nth-child(1) {
         height: 650px;
     }
@@ -696,10 +725,6 @@ div.container:nth-child(2)>div:nth-child(2)>div:nth-child(1)>p:nth-child(1) {
     #chart_div {
         margin-top: 15vh;
     }
-    #topChartForm {
-        display: flex;
-        flex-direction: column;
-    }
     html body main div#topic1.section div.container div#context.row div#column-text p {
         font-size: 16px;
     }
@@ -715,6 +740,24 @@ div.container:nth-child(2)>div:nth-child(2)>div:nth-child(1)>p:nth-child(1) {
     html body main div#topic1.section div.container {
         height: 550px;
     }
+    html body main div#topic1.section div.container,
+    html body main div#topic2.section div.container {
+        height: 750px;
+    }
+}
+
+@media screen and (max-width: 300px) {
+    html body main div#topic2.section div.container div.row div#column-text p {
+        font-size: 14px;
+    }
+}
+
+.buttons {
+    margin-top: 30px;
+}
+
+html body main div#topic2.section div.container-id div#context.row div#column-text form input#submit {
+    margin-top: 10px;
 }
 
 #topChartForm {
@@ -820,4 +863,34 @@ footer {
     border-color: #ff2b2d;
     font-family: sans-serif;
     font-weight: 300;
+}
+
+
+/* about page */
+
+#column-text>p:nth-child(1) {
+    font-size: 20px;
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+.container-about {
+    height: 950px;
+}
+
+h3 {
+    font-family: Consolas, monaco, monospace;
+    font-size: 24px;
+    margin-top: 50px;
+}
+
+i.fab:nth-child(1) {
+    margin-left: 46vw;
+    margin-bottom: 10px;
+}
+
+i.fas:nth-child(12) {
+    margin-left: 48vw;
+    margin-bottom: 10px;
+    font-size: 30px;
 }
